--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v5
+      uses: actions/setup-go@v4
       with:
         go-version: '1.22.2'
 
@@ -22,4 +22,8 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v  ./...
+      run: go test -v -coverprofile=coverage.out ./...
+
+    - name: Coverage report
+      if: always()
+      run: go tool cover -func=coverage.out
