--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,4 +26,4 @@ jobs:
 
     - name: Security Scan
       run: |
-        docker run --rm -v $(pwd):/app aquasec/trivy HIGH -o trivy-report.json /app
+        docker run --rm -v $(pwd):/app aquasec/trivy HIGH
