--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,4 +26,4 @@ jobs:
 
     - name: Security Scan
       run: |
-        docker run --rm -v $(pwd):/app aquasec/trivy repository
+        trivy repo .
