--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,4 +27,20 @@ jobs:
     - name: Security Scan
       run: |
         docker run --rm -v ${{ github.workspace }}:/repo aquasec/trivy repo /repo
+    
+    - name: Cache Go modules
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/go/pkg/mod
+          ~/.cache/go-build
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+
+    - name: Upload Coverage Report
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-report
+        path: coverage.out
 
