--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Security Scan
       run: |
-        docker run --rm -v ${{ github.workspace }}:/repo aquasec/trivy repo /repo
+        docker run --rm -v ${{ github.workspace }}:/repo aquasec/trivy repo /gotrash
     
     - name: Cache Go modules
       uses: actions/cache@v3
