--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,6 +18,21 @@ jobs:
       with:
         go-version: '1.22.2'
 
+    - name: Create directories for caching
+      run: |
+        mkdir -p $HOME/go/pkg/mod
+        mkdir -p $HOME/.cache/go-build
+
+    - name: Cache Go modules and build cache
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/go/pkg/mod
+          ~/.cache/go-build
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+
     - name: Build
       run: go build -v ./...
 
