--- a/renovate.json
+++ b/renovate.json
@@ -1,44 +1,34 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ],
+  "extends": ["config:recommended"],
   "packageRules": [
     {
       "groupName": "all patch dependencies",
       "groupSlug": "all-patch",
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "matchUpdateTypes": [
-        "patch"
-      ],
+      "matchPackagePatterns": ["*"],
+      "matchUpdateTypes": ["patch"],
       "automerge": true,
-      "schedule": ["after 10pm and before 5am on Monday, Tuesday, Wednesday, Thursday"],
+      "schedule": [
+        "after 10pm and before 5am on Monday, Tuesday, Wednesday, Thursday"
+      ],
       "labels": ["dependencies", "patch"]
     },
     {
       "groupName": "all minor dependencies",
       "groupSlug": "all-minors",
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "matchUpdateTypes": [
-        "minor"
-      ],
+      "matchPackagePatterns": ["*"],
+      "matchUpdateTypes": ["minor"],
       "automerge": true,
-      "schedule": ["after 10pm and before 5am on Monday, Tuesday, Wednesday, Thursday"],
+      "schedule": [
+        "after 10pm and before 5am on Monday, Tuesday, Wednesday, Thursday"
+      ],
       "labels": ["dependencies", "minor"]
     },
     {
       "groupName": "all major dependencies",
       "groupSlug": "all-majors",
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "matchUpdateTypes": [
-        "major"
-      ],
+      "matchPackagePatterns": ["*"],
+      "matchUpdateTypes": ["major"],
       "automerge": false,
       "labels": ["dependencies", "major"],
       "minimumReleaseAge": "7 days"
