--- a/renovate.json
+++ b/renovate.json
@@ -38,5 +38,5 @@
   "automerge": true,
   "requiredStatusChecks": null,
   "dependencyDashboard": true,
-  "timezone": "Europe/London"
+  "timezone": "Europe/Paris"
 }
